Update composer file
Changed name and description

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-	"name": "laravel/laravel",
-	"description": "The Laravel Framework.",
+	"name": "golfleague",
+	"description": "Michael Schmidt's Golf league Software",
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
