--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,7 @@
 	"require": {
 		"laravel/framework": "4.1.*",
 		"way/generators": "dev-master",
-		"fzaninotto/faker": "1.4.*@dev",
-		"codesleeve/asset-pipeline": "dev-master"
+		"fzaninotto/faker": "1.4.*@dev"
 	},
 	"autoload": {
 		"classmap": [
