--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
 	"keywords": ["framework", "laravel"],
 	"license": "MIT",
 	"require": {
-		"laravel/framework": "4.1.*",
+		"laravel/framework": "4.1.24",
 		"way/generators": "dev-master",
 		"fzaninotto/faker": "1.4.*@dev"
 	},
