Added triple pivot to composer
Updated to include triple pivot for the levels_players_matches table

--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
+		"jarektkaczyk/eloquent-triple-pivot": "dev-master",
 		"way/generators": "3.0.*",
 		"fzaninotto/faker": "1.4.*@dev"
 	},
